# rusted

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config-example.toml  pyproject.toml
python/rusted/: hello_world.py
src/: lib.rs  main.rs
src/lib/: ai.rs  bash.rs  config.rs  python.rs  rand.rs  ssh.rs  venv.rs
tests/: main.rs  test_config.rs
