[package]
name = "rusted"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "rusted"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "rusted"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }
config = "0.14.0"
serde = { version = "1.0.200", features = ["derive"] }
regex = "1.10.4"
serde_json = "1.0.116"
once_cell = "1.19.0" # TODO: Remove when Lazy moved to std::cell
